org.mmisw.iserver 
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13

2000-08-03:   1.5.0.alpha4
	- Server.createOntology(CreateOntologyInfo): Do NOT remove "original OWL.Ontology individual"
	  if where are in re-hosting mode (createOntologyResult.isPreserveOriginalBaseNamespace).
	  If we did this on a model with the same original namespace, we would remove the owl:Ontology 
	  entry altogether and get an "rdf:Description" instead.
	  
	- Having weird RPC-related error "connection refused", which seems a GWT problem:
	  the asynchronous call registerOntology(CreateOntologyResult, LoginResult) on the client
	  does not get called to the server side.
	  
	  Fixed: Config.Prop.BIOPORTAL_REST_URL was not appropriately initialized from Server.
	  The default value (localhost based) caused the "connection refused".  This was very hard
	  to detect as the log info in the server was not showing anything!
	
	
	
2000-08-01,03:   1.5.0.alpha3 (was 1.5.0.alpha2)
	Server.getInstance(String ontServiceUrl, String bioportalRestUrl): now with parameters indicating
	the "Ont" service URL and the BioPortal REST base URL (these were previously hard-coded).
		- Config: added corresponding attributes
		- Corresponding updates in: OntologyUploader, VocabCreator, OntServiceUtil. 
		
2009-07-31  
	1.5.0.alpha2
	Continuing with "re-hosting" feature:
	
	- OntServiceUtil: new class with utility to resolve an ontology URI against the "Ont" service
	  but using the "uri" parameter, instead of trying to use the URI itself.
	- JenaUtil2.retrieveModel: based on service above.
	- Server:
		- getOntologyInfo: handle MmiUri case but also, non MmiUri (as a case of re-hosted ontology).
		  Note that the same (re-hosted) URI string is handled as both the versioned and unversioned,
		  TODO define versioning mechanism!
		- getOntologyContents: now uses JenaUtil2.retrieveModel
		- Other changes related with namespaceRoot, see below. 
		
	  