@@ -2,6 +2,7 @@ package org.mmisw.iserver.core.util;
 
 import java.net.URLEncoder;
 
+import org.apache.commons.httpclient.HttpStatus;
 import org.mmisw.iserver.core.Config;
 
 
@@ -33,5 +34,23 @@ public class OntServiceUtil {
 		return str;
 	}
 
+	/**
+	 * Determines if the URI corresponds to a registered ontology.
+	 * It uses similar approach {@link  }
+	 * 
+	 * @param uriModel  The URI of the desired ontlogy.
+	 * @param acceptEntries list of accept header entries
+	 * @return true iff the ontology is registered.
+	 * @throws Exception
+	 */
+	public static boolean isRegisteredOntologyUri(String uriModel, String... acceptEntries) throws Exception {
+		
+		String ontServiceUrl = Config.Prop.ONT_SERVICE_URL.getValue();
+		uriModel = URLEncoder.encode(uriModel, "UTF-8");
+		String ontServiceRequest = ontServiceUrl + "?uri=" +uriModel;
+		int statusCode = HttpUtil.httpGetStatusCode(ontServiceRequest, acceptEntries);
+		
+		return statusCode == HttpStatus.SC_OK;
+	}
 }
 
